# Callytics

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt
.data/groundtruth/speakerverification/call/v1/: Call01.srt  Call02.srt
.db/: Callytics.sqlite
.docs/documentation/: CONTRIBUTING.md  RESOURCES.md
.docs/img/: Callytics.drawio
callytics/: __init__.py  __main__.py
callytics/audio/: metrics.py  preprocessing.py  processing.py
callytics/config/: prompt.yaml
callytics/db/: manager.py
callytics/db/sql/: AudioPropertiesInsert.sql
callytics/text/: llm.py
callytics/utils/: utils.py
config/: config.yaml
config/nemo/: diar_infer_telephonic.yaml
src/audio/: alignment.py  analysis.py  error.py  preprocessing.py  processing.py
src/db/sql/: UtteranceInsert.sql
src/text/: llm.py
